--- a/Bus-Reservation-frontend/package.json
+++ b/Bus-Reservation-frontend/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "react-select": "^5.10.0",
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
